--- a/assets/adview.html
+++ b/assets/adview.html
@@ -1,4 +1,9 @@
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1041962463440000"
+<html>
+<head>
+<title></title>
+</head>
+<body>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1041962463440000"
      crossorigin="anonymous"></script>
 <!-- teste -->
 <ins class="adsbygoogle"
@@ -10,3 +15,5 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</body>
+</html>
