ajust asset ads

--- a/assets/adview.html
+++ b/assets/adview.html
@@ -1,10 +1,13 @@
 <html>
 <head>
-<title></title>
+     <!-- adsense -->
+<meta name="google-adsense-account" content="ca-pub-1041962463440000">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1041962463440000"
+crossorigin="anonymous"></script>
+<title>Ad</title>
 </head>
 <body>
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1041962463440000"
-     crossorigin="anonymous"></script>
+    
 <!-- teste -->
 <ins class="adsbygoogle"
      style="display:block"
